인풋창수정

--- a/index.html
+++ b/index.html
@@ -56,14 +56,17 @@
     </h1>
     <!-- ! form 태그 = 정보 전송 -->
     <form action="https://www.google.com/search" method="get">
-      <input type="text" name="q" />
-      <i class="fa-solid fa-magnifying-glass left-con"></i>
-      <i class="bx bxs-microphone right-con"></i>
-      <i class="bx bxs-keyboard right-con"></i>
+      <div class="search">
+        <div class="search-container">
+          <input type="text" name="q" placeholder="Soogle 검색 또는 URL 입력" />
+          <i class="fa-solid fa-magnifying-glass left-con"></i>
+          <i class="bx bxs-microphone right-con"></i>
+          <i class="bx bxs-keyboard right-con"></i>
+        </div>
+      </div>
       <div class="button-box">
         <button type="submit">Soogle 검색</button>
         <button>I'm Feeling Lucky</button>
-        <!--https://velog.io/@fhwmqkfl/Weegleweegleasdf 참고 !-->
       </div>
     </form>
   </body>
